# fjp-conformance

./: .gitignore  CHANGELOG.md  Caddyfile  Dockerfile  LICENSE  NOTICE  README.md  TRADEMARKS.md  pyproject.toml
conformance/: __init__.py  adapter.py  checks.py  runner.py  schema.py
examples/: failing_agent.json  passing_agent.json  passing_agent_l3.py
spec/: schema.md  v0.1.md
tests/: test_checks.py
web/: index.html  landing.html  quickstart.html  success.html
